--- a/blog2.html
+++ b/blog2.html
@@ -434,7 +434,7 @@ li {
 }
 .search input:not(:placeholder-shown) + div svg, .search input:focus + div svg {
   stroke-dasharray: 150 212.908;
-  stroke-dashoffset: 300;
+  //stroke-dashoffset: 300;
 }
 
 ::-moz-selection {
