--- a/blog2.html
+++ b/blog2.html
@@ -511,7 +511,7 @@ li {
 	border-color: #223454
 }
 
-nav:not(.rank-math-breadcrumb) {
+nav:not(.rank-math-breadcrumb) .hero-unit {
 	width: 100%;
 	z-index: 0;
 	position: sticky;
@@ -562,7 +562,7 @@ nav:not(.rank-math-breadcrumb) ul {
 	.top-crest {
     height: 160px;
     width: auto;
-    padding-right: 5rem;
+    padding-right: 11rem;
     position: sticky;
     align-items: center;
 }
