--- a/blog2.html
+++ b/blog2.html
@@ -511,10 +511,10 @@ li {
 	border-color: #223454
 }
 
-nav:not(.rank-math-breadcrumb) .hero-unit {
+nav:not(.rank-math-breadcrumb)  {
 	width: 100%;
 	z-index: 0;
-	position: sticky;
+	position: none;
 	top: 0;
 	left: 0;
 	right: 0;
