--- a/Under_Construction.html
+++ b/Under_Construction.html
@@ -64,7 +64,7 @@
 </ul>
 <hgroup class="site-title">
 <h1 style="text-align: center; margin-bottom:0 ; text-decoration: none;" class="site-title">
-<a href="index.html" title="" style="text-decoration: none; padding-top: -54rem; color: white;" rel="home">DE LA SALLE COLLEGE MUTWAL</a></h1>
+<a href="index.html" title="" style="text-decoration: none; padding-top: -54rem; color: rgba(255, 255, 255, 0.849);" rel="home">DE LA SALLE COLLEGE MUTWAL</a></h1>
 </hgroup>
 <br>
 </nav>
