--- a/Under_Construction.html
+++ b/Under_Construction.html
@@ -19,7 +19,16 @@
     <link rel="stylesheet" type="text/css" href="css/scroll.css">
 </head>
 
-<body>
+<body id="home">
+  <div class="loader_bg">
+    <div class="loader"></div>
+</div>
+
+<div class="progress-wrap">
+    <svg class="progress-circle svg-content" width="100%" height="100%" viewBox="-1 -1 102 102">
+        <path d="M50,1 a49,49 0 0,1 0,98 a49,49 0 0,1 0,-98" />
+    </svg>
+</div>
 
 <!-- Start Your Body Code From here -->
 
