--- a/The-Coat-of-Arms.html
+++ b/The-Coat-of-Arms.html
@@ -220,7 +220,7 @@
                                 <ul class="dropdown-menu multi-level">
                                     <li><a href="Co-curiiicular-Activities.html">CURRICULAR ACTIVITIES</a></li>
                                     <li><a href="Sports-and-Games.html">SPORTS AND GAMES</a></li>
-                                    <li><a href="Under_Construction.html">CLUBS & SOCIETIES</a></li>
+                                    <li><a href="clubs-and-societies.html">CLUBS & SOCIETIES</a></li>
                                     <li><a href="announcements.html">ANNOUNCEMENTS</a></li>
                                     <li><a href="news.html">NEWS AND EVENTS</a></li>
                                     <!--li><a href="Under_Construction.html">HIGHLIGHTS & ACHIEVEMENTS</a></li-->
