--- a/blog2.html
+++ b/blog2.html
@@ -67,6 +67,8 @@
         </use></svg>
     </div>
 </div>
+<script async src="https://cse.google.com/cse.js?cx=7a48d655db28414ce"></script>
+<div class="gcse-search"></div>
     
 <svg xmlns="http://www.w3.org/2000/svg" style="display: none;">
     <symbol xmlns="http://www.w3.org/2000/svg" viewBox="0 0 160 28" id="path">
