--- a/Blogs/Our-New-College-Website-Has-Been-Launched.html
+++ b/Blogs/Our-New-College-Website-Has-Been-Launched.html
@@ -81,7 +81,7 @@
 </symbol>
 </svg>
 
-  </li><li><a href="index.html"><img src="https://raw.githubusercontent.com/kasuncfdo/dls/main/College%20Assests/College-Items/DLS_WEBCREST.png" alt="" class="top-crest" id="top-crest" style="transform: scale(0.8);"></a></li>
+  </li><li><a href="../index.html"><img src="https://raw.githubusercontent.com/kasuncfdo/dls/main/College%20Assests/College-Items/DLS_WEBCREST.png" alt="" class="top-crest" id="top-crest" style="transform: scale(0.8);"></a></li>
     <li>
      <div class="nav-icons">
         <div class="navbar navbar-inverse navbar-custom" role="navigation">
@@ -100,7 +100,7 @@
 </ul>
 <hgroup class="site-title">
 <h1 style="text-align: center; margin-bottom:0 ; text-decoration: none;" class="site-title">
-<a href="index.html" title="" style="text-decoration: none; padding-top: -54rem; color: rgb(255, 255, 255);" rel="home">DE LA SALLE COLLEGE MUTWAL</a></h1>
+<a href="../index.html" title="" style="text-decoration: none; padding-top: -54rem; color: rgb(255, 255, 255);" rel="home">DE LA SALLE COLLEGE MUTWAL</a></h1>
 </hgroup>
 <br>
 </nav>
