--- a/index.html
+++ b/index.html
@@ -21,7 +21,9 @@
     <link href="css/snowflakes.css" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="css/style.css">
     <link rel="stylesheet" type="text/css" href="css/slick.css">
-    <link rel="stylesheet" type="text/css" href="fonts/fontawesome-free-6.0.0-beta3-web/css/all.min.css"> 
+    <link href="fonts/fontawesome-free-6.0.0-beta3-web/css/fontawesome.css" rel="stylesheet">
+    <link href="fonts/fontawesome-free-6.0.0-beta3-web/css/brands.css" rel="stylesheet">
+    <link href="fonts/fontawesome-free-6.0.0-beta3-web/css/solid.css" rel="stylesheet">
 
     <!-- Start WOWSlider HEAD section --> <!-- add to the <head> of your page -->
 	  <link rel="stylesheet" type="text/css" href="College Assests/main-infoslider/engine1/style.css" />
@@ -1234,13 +1236,11 @@ $(document).ready(function(){
             <h2>Get in touch</h2>
       
             <div class="content">
-                <a href="https://www.facebook.com/DeLaSalleCollegeColombo"><i class="fa fa-facebook" aria-hidden="true"
-                                title="Official Facebook Page"></i></a>
-                <a href=""><i class="fa fa-github" aria-hidden="true"
-                                                      title="Github Group"></i></a>
-                <a href="#!"><i class="fa fa-linkedin" aria-hidden="true" title="LinkedIn Profile"></i></a>
-                <a href="#!" title=""><i class="fa fa-twitter" aria-hidden="true"
-                                         title="Official Twitter Account"></i></a>
+                <a href="https://www.facebook.com/DeLaSalleCollegeColombo">
+                    <i class="fab fa-facebook" aria-hidden="true" title="Official Facebook Page"></i></a>
+                <a href=""><i class="fab fa-github" aria-hidden="true" title="Github Group"></i></a>
+                <a href="#!"><i class="fab fa-linkedin" aria-hidden="true" title="LinkedIn Profile"></i></a>
+                <a href="#!" title=""><i class="fab fa-twitter" aria-hidden="true" title="Official Twitter Account"></i></a>
             </div>
          </div>
         </div>
