Latest Footer Update

--- a/Activities-in-Development-Stage.html
+++ b/Activities-in-Development-Stage.html
@@ -443,7 +443,7 @@ box-shadow: 0 7px 30px -10px rgba(150,170,180,0.5);
                       <br>
                   <ul class="menu clearfix"><li class="first leaf"><a href="Privacy-Policy.html" title="">Privacy</a></li>
               <li class="leaf"><a href="gallery.html" title="">Gallery</a></li>
-              <li class="last leaf"><a href="blog.html" title="">News and Events</a></li>
+              <li class="last leaf"><a href="news.html" title="">News and Events</a></li>
               </ul>  </div>
               </div>
                 </div>
