--- a/Under_Construction.html
+++ b/Under_Construction.html
@@ -356,7 +356,7 @@ h2 {
               <br>
           <ul class="menu clearfix"><li class="first leaf"><a href="Privacy-Policy.html" title="">Privacy</a></li>
       <li class="leaf"><a href="gallery.html" title="">Gallery</a></li>
-      <li class="last leaf"><a href="blog.html" title="">News and Events</a></li>
+      <li class="last leaf"><a href="news.html" title="">News and Events</a></li>
       </ul>  </div>
       </div>
         </div>
@@ -395,7 +395,7 @@ h2 {
            
     </div>
     <!--Footer End-->
-    
+
 <!--Scripts Starts-->
 <script   src="https://code.jquery.com/jquery-2.2.4.min.js"   integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44="   crossorigin="anonymous"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
