--- a/College-Directors.html
+++ b/College-Directors.html
@@ -458,7 +458,7 @@ margin: -5vw -9vw 2vw;
                   <br>
               <ul class="menu clearfix"><li class="first leaf"><a href="Privacy-Policy.html" title="">Privacy</a></li>
           <li class="leaf"><a href="gallery.html" title="">Gallery</a></li>
-          <li class="last leaf"><a href="blog.html" title="">News and Events</a></li>
+          <li class="last leaf"><a href="news.html" title="">News and Events</a></li>
           </ul>  </div>
           </div>
             </div>
