--- a/clubs-and-societies.html
+++ b/clubs-and-societies.html
@@ -18,6 +18,43 @@
     <link rel="stylesheet" type="text/css" href="css/scroll.css">
     <link rel="stylesheet" type="text/css" href="css/style.css">
 
+    <!--Site Meta-->
+
+    <meta property="og:locale" content="en_GB" />
+    <meta property="og:site_name" content="De La Salle College,Colombo - Indivisa Manent" />
+    <meta property="og:type" content="article" />
+    <meta property="og:title" content="Clubs and Societies | De La Salle College, Colombo - Indivisa Manent" />
+    <meta property="og:url" content="https://www.delasalle.lk/" />
+    <meta property="og:image" content="https://raw.githubusercontent.com/kasuncfdo/dls/main/img/Meta/dlsogimg1ps.jpg" />
+    <meta property="og:image:secure_url" content="https://raw.githubusercontent.com/kasuncfdo/dls/main/img/Meta/dlsogimg1ps.jpg" />
+    <meta property="og:image:width" content="1024" />
+    <meta property="og:image:height" content="567" />
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:site" content="" />
+    <meta name="twitter:domain" content="www.delasalle.lk" />
+    <meta name="twitter:title" content="Events | De La Salle College, Colombo - Indivisa Manent" />
+    <meta name="twitter:image" content="https://raw.githubusercontent.com/kasuncfdo/dls/main/img/Meta/dlsogimg1ps.jpg" />
+
+    <!-- Primary Meta Tags -->
+<meta name="title" content="Clubs and Societies | De La Salle College, Colombo - Indivisa Manent">
+<meta name="description" content="De La Salle College, Colombo is the only school in Sri Lanka dedicated to the Patron Saint of Christian Teachers St. John Baptist de la Salle, founder of the congregation of De La Salle Brothers of the Christian Schools in Latin: "Fratres Scholarum Christianarum".">
+
+<!-- Open Graph / Facebook -->
+<meta property="og:type" content="website">
+<meta property="og:url" content="https://delasalle.lk">
+<meta property="og:title" content="clubs and Societies | De La Salle College, Colombo - Indivisa Manent">
+<meta property="og:description" content="De La Salle College, Colombo is the only school in Sri Lanka dedicated to the Patron Saint of Christian Teachers St. John Baptist de la Salle, founder of the congregation of De La Salle Brothers of the Christian Schools in Latin: "Fratres Scholarum Christianarum".">
+<meta property="og:image" content="https://raw.githubusercontent.com/kasuncfdo/dls/main/img/Meta/dlsogimg1ps.jpg">
+
+<!-- Twitter -->
+<meta property="twitter:card" content="summary_large_image">
+<meta property="twitter:url" content="https://delasalle.lk">
+<meta property="twitter:title" content="Club and Societies | De La Salle College, Colombo - Indivisa Manent">
+<meta property="twitter:description" content="De La Salle College, Colombo is the only school in Sri Lanka dedicated to the Patron Saint of Christian Teachers St. John Baptist de la Salle, founder of the congregation of De La Salle Brothers of the Christian Schools in Latin: "Fratres Scholarum Christianarum".">
+<meta property="twitter:image" content="https://raw.githubusercontent.com/kasuncfdo/dls/main/img/Meta/dlsogimg1ps.jpg">
+
+
+
 </head>
 <style>
 .navbar-nav li{
@@ -660,7 +697,7 @@ body {
               <br>
           <ul class="menu clearfix"><li class="first leaf"><a href="Privacy-Policy.html" title="">Privacy</a></li>
       <li class="leaf"><a href="gallery.html" title="">Gallery</a></li>
-      <li class="last leaf"><a href="blog.html" title="">News and Events</a></li>
+      <li class="last leaf"><a href="news.html" title="">News and Events</a></li>
       </ul>  </div>
       </div>
         </div>
