--- a/news.html
+++ b/news.html
@@ -393,7 +393,7 @@
                                         <div class="row">
                                             <div class="col-md-4 col-lg-4 m-15px-tb">
                                                 <div class="news-grid">
-                                                    <div class="news-grid-image"><img src="mockups/mockupitemd.jpg" alt="">
+                                                    <div class="news-grid-image"><img src="News and Events/web.png" alt="">
                                                         <div class="news-grid-box">
                                                             <h1>11</h1>
                                                             <p>May</p>
@@ -402,7 +402,7 @@
                                                             <span>EVENTS</span>
                                                             <h2>Our New College Website Has Been Launched</h2>
                                                             <ul>
-                                                                <li><i class="fa fa-calendar" aria-hidden="true"></i> May 11, 2021</li>
+                                                                <li><i class="fa fa-calendar" aria-hidden="true"></i> Dec 11, 2021</li>
                                                                 <li><i class="fa fa-user" aria-hidden="true"></i> Admin</li>
                                                             </ul>
                                                             <p>we are so excited announce The launch of our redesigned website and launch announcement on December 11th, 2021, after nearly two months of the efforts and dedication of our college student Mast Kasun Chanuka.</p>
