--- a/news.html
+++ b/news.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>De La Salle College Colombo 15 | Blog</title>
+    <title>De La Salle College Colombo 15 | News</title>
 
     <!--favicon-->
     <link rel="apple-touch-icon" sizes="180x180" href="favicon/apple-touch-icon.png">
