--- a/news.html
+++ b/news.html
@@ -554,7 +554,7 @@
                                             </div></div>
 
         <!-- Content wrapper -->
-        <section class="blog-listing">
+        <!--section class="blog-listing">
                 <div class="container">
                     <div class="row align-items-start">
                         <div class="col-lg-8 m-15px-tb">
@@ -697,7 +697,7 @@
                                         </div>
                                     </div>
                                 </div-->
-                                <div class="col-sm-6">
+                                <!--div class="col-sm-6">
                                     <div class="blog-grid">
                                         <div class="blog-img">
                                             <div class="date">
@@ -765,13 +765,15 @@
                                             </div>
                                         </div>
                                     </div>
-                                </div>
+                                </div-->
                             </div>
                         </div>
                     </div>
                 </div>
         </section>
     </div>
+    <br>
+    <br>
 
                 <!-- Footer -->
                 <div class="footer-area">
