--- a/view-events.html
+++ b/view-events.html
@@ -62,7 +62,7 @@
 
 </head>
 
-<body id="home">
+<body>
   <div class="loader_bg">
     <div class="loader"></div>
 </div>
@@ -356,7 +356,7 @@
                       }
                     /*********************event_home_end****************/
         </style>
-        
+
         <!-- Content wrapper -->
         <section id="event_home">
           <div class="container">
@@ -371,14 +371,14 @@
                 <div class="col-sm-3 space_left">
                  <div class="event_h1li1l clearfix">
                   <hr>
-                  <h3 class="mgt">05 <span>April</span></h3>
+                  <h3 class="mgt">18 <span>January</span></h3>
                  </div>
                 </div>
                 <div class="col-sm-9">
                  <div class="event_h1li1r clearfix">
-                  <h4 class="mgt bold"><a href="#">Workshop by Bob Doe</a></h4>
-                  <h6><i class="fa fa-clock-o" aria-hidden="true"></i> April 3, 2020 / 8:00 am - April 6, 2021 / 5:00 pm</h6>
-                  <h6><i class="fa fa-map-marker" aria-hidden="true"></i> Baltimore MD United States</h6>
+                  <h4 class="mgt bold"><a href="#">Rev. Principal's Birthday Celebration</a></h4>
+                  <h6><i class="fa fa-clock-o" aria-hidden="true"></i> January 18, 2022 / 7:30 AM - 11:00 AM</h6>
+                  <h6><i class="fa fa-map-marker" aria-hidden="true"></i> De La Salle College</h6>
                  </div>
                 </div>
                </div>
@@ -436,8 +436,48 @@
                        <div id="home" class="tab-pane fade clearfix active in">
                           <div class="click clearfix">
                            <div class="home_i col-sm-12 clearfix">
-                            <h4 class="mgt bold">Available Events</h4>
-                            <p>None</p>
+                            <h4 class="mgt bold">Past Events</h4>
+                            <div class="event_h1li1 clearfix">
+                                <div class="col-sm-3 space_left">
+                                 <div class="event_h1li1l clearfix">
+                                  <hr>
+                                  <h3 class="mgt">18 <span>January</span></h3>
+                                 </div>
+                                </div>
+                                <div class="col-sm-9">
+                                  <h4 class="mgt bold"><a href="#">Rev. Principal's Birthday Celebration</a></h4>
+                                  <h6><i class="fa fa-clock-o" aria-hidden="true"></i> January 18, 2022 / 7:30 AM - 11:00 AM</h6>
+                                  <h6><i class="fa fa-map-marker" aria-hidden="true"></i> De La Salle College</h6>
+                                 </div>
+                                </div>
+                                
+                                <div class="event_h1li1 clearfix">
+                                    <div class="col-sm-3 space_left">
+                                     <div class="event_h1li1l clearfix">
+                                      <hr>
+                                      <h3 class="mgt">18 <span>January</span></h3>
+                                     </div>
+                                    </div>
+                                    <div class="col-sm-9">
+                                      <h4 class="mgt bold"><a href="#">Rev. Principal's Birthday Celebration</a></h4>
+                                      <h6><i class="fa fa-clock-o" aria-hidden="true"></i> January 18, 2022 / 7:30 AM - 11:00 AM</h6>
+                                      <h6><i class="fa fa-map-marker" aria-hidden="true"></i> De La Salle College</h6>
+                                     </div>
+                                    </div>
+
+                                    <div class="event_h1li1 clearfix">
+                                        <div class="col-sm-3 space_left">
+                                         <div class="event_h1li1l clearfix">
+                                          <hr>
+                                          <h3 class="mgt">18 <span>January</span></h3>
+                                         </div>
+                                        </div>
+                                        <div class="col-sm-9">
+                                          <h4 class="mgt bold"><a href="#">Rev. Principal's Birthday Celebration</a></h4>
+                                          <h6><i class="fa fa-clock-o" aria-hidden="true"></i> January 18, 2022 / 7:30 AM - 11:00 AM</h6>
+                                          <h6><i class="fa fa-map-marker" aria-hidden="true"></i> De La Salle College</h6>
+                                         </div>
+                                        </div>
                            </div>
                           </div>
                        </div>
