--- a/view-events.html
+++ b/view-events.html
@@ -23,6 +23,8 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="css/scroll.css">
     <link rel="stylesheet" type="text/css" href="css/style.css">
+    <link
+                rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta2/css/all.min.css" integrity="sha512-YWzhKL2whUzgiheMoBFwW8CKV4qpHQAEuvilg9FAn5VJUDwKZZxkJNuGM4XkWuk94WCrrwslk8yWNGmY1EduTA==" crossorigin="anonymous" referrerpolicy="no-referrer />
 
     <!--Site Meta-->
 
@@ -75,7 +77,7 @@
 
 <!-- Start Your Body Code From here -->
 
-<div class="wrapper">
+
     <!-- header starts here -->
     
         <!-- header -->
@@ -355,6 +357,19 @@
                      border-radius: 1rem;
                       }
                     /*********************event_home_end****************/
+
+                  
+                @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;500&display=swap");
+html{
+  scroll-behavior: smooth;
+}
+body {
+  font-family: "Poppins", sans-serif;
+
+}
+
+.container {
+    padding-right: 0px;
         </style>
 
         <!-- Content wrapper -->
