--- a/index.html
+++ b/index.html
@@ -1342,6 +1342,7 @@ $(document).ready(function(){
 </script><script type="text/javascript" src="js/jquery.paginate.min.js "></script>
 <script type="text/javascript" src="//cdn.jsdelivr.net/jquery.slick/1.6.0/slick.min.js"></script>
 
+<script src="//instant.page/5.1.0" type="module" integrity="sha384-by67kQnR+pyfy8yWP4kPO12fHKRLHZPfEsiSXR8u2IKcTdxD805MGUXBzVPnkLHw"></script>
 
 <!--
 /********************************
