--- a/index.html
+++ b/index.html
@@ -406,8 +406,8 @@ $(document).ready(function(){
             <!-- Wrapper for slides -->
             <div class="carousel-inner">
                 <div class="item slider1 active">
-                    <video autoplay="autoplay" loop="loop" autobuffer="autobuffer" muted="muted" width="100%" height="auto">
-                        <source src="vid/dlscrest.mp4" type="video/mp4">
+                    <video autoplay="autoplay" autobuffer="autobuffer" muted="muted" width="100%" height="auto">
+                        <source src="vid/intro.mp4" type="video/mp4">
                     </video>
                     <div class="carousel-caption slider-con">
                       <img class="responsive-img" height="auto" src="img/DLSC_Logo_1x1_small.png" alt="DLSOBU">
@@ -1247,7 +1247,7 @@ $(document).ready(function(){
           </div>
         </div>
     <hr class="hr-text" data-content="">
-    <p style="color: rgba(248, 248, 255, 0.719); text-align: center; size: auto;">© Copyright 2021 | De La Salle College, Mutwal, Sri Lanka.<br>All Rights <svg class="heart" viewBox="0 0 32 29.6">
+    <p style="color: rgba(248, 248, 255, 0.719); text-align: center; size: auto;">© Copyright 2022 | De La Salle College, Mutwal, Sri Lanka.<br>All Rights <svg class="heart" viewBox="0 0 32 29.6">
         <path d="M23.6,0c-3.4,0-6.3,2.7-7.6,5.6C14.7,2.7,11.8,0,8.4,0C3.8,0,0,3.8,0,8.4c0,9.4,9.5,11.9,16,21.2
           c6.1-9.3,16-12.1,16-21.2C32,3.8,28.2,0,23.6,0z"></path>
       </svg> Reserved</p>
