--- a/deputy-principal.html
+++ b/deputy-principal.html
@@ -337,10 +337,11 @@
                         
                     </p>
                     <blockquote>
-                        <p></p>
+                        <p>"The great aim of education is not knowledge but action.” Herbert Spencer.
+                        </p>
                     </blockquote>
                     <p>
-                        
+                        I am delighted that the school has launched its website. The purpose of the website in the school, is to communicate about the happenings in the school to Parents, our clients, and to see deeper in to what is happening in the school where they send their child every day. I hope it will help students , Parents and all our well wishers to know about the activities of the school.The web site is a hub for all of us. It show the multifarious activities of the school, be it academic, co-curricular activity or sports. It encourages our students to go higher and higher in the realm, of learning. I hope that this website will create an immediate and sustained impression that our school have been recognized as a premier school in  Colombo Zone.  
                     </p>
                 </div>
             </div>
