--- a/directors_message.html
+++ b/directors_message.html
@@ -336,13 +336,22 @@
                 </div>
                 <div class="dir-text">
                     <p>
-                        
+                        It gives me great pleasure to welcome you to De Lasalle College website. We have tried to create an online resource that provides all relevant information about De Lasalle College. and I hope that as you peruse through the contents of this website, you will get a sense of the rich flavour of life at our school De Lasalle College.   
+                    </p>
+                    <P>
+                        At De Lasalle College all aspects of our educational processes are carefully designed to cultivate and stimulate the intellectual, social, and personal development of the most important stakeholders at this institution the students. As we are here to serve a global community, we assist internationally-mobile families in making a smooth transfer to any school system or graduate to universities world-wide.
+                    </P>
+                    <p>
+                        We are passionate about creating a ‘learning’ institution that is dynamic and constantly seeking excellence to meet the needs of the present as well as the future, while learning from the ethical and moral value systems of our country. De Lasalle College is committed to the complete development of a student; this includes academic knowledge, social skills, intellectual curiosity, Physical endurance and a special emphasis on self-discovery. We have a diverse group of students and teachers who possess a global perspective. We invest wisely in our human resources for the professional development of our staff and they in turn see themselves as part of the world-wide educational community. 
                     </p>
                     <blockquote>
                         <p></p>
                     </blockquote>
                     <p>
-                        
+                        We promote tolerance, mutual respect and international-mindedness. It is our commitment to mould children to be open to thinking globally and be prepared for life anywhere in the world. We believe that self-discipline is more sustainable than imposed discipline and hence there is no authoritarianism in our school. In our scheme of things we promote high standards of achievement and provide space for our students to flourish.    
+                    </p>
+                    <p>
+                        As parents and teachers, it is our commitment to adopt ways and means to channelize the talents and energy of our students into creative community building. With this noble sense of purpose may I request all staff, parents and well wishers to join hands as we take  De Lasalle College to greater heights. 
                     </p>
                 </div>
             </div>
