--- a/deputy-principal.html
+++ b/deputy-principal.html
@@ -316,6 +316,12 @@
                  /************ .contents-wrapper{
                       background-image: url("./img/bg\ layer.jpg");
                   } ****************/
+
+                  @media (min-width: 600px) and (max-width: 767px) {
+                    .contents-wrapper .content {
+  padding-left: 0rem;
+  padding-right: 0rem;
+} }
                     
         </style>
         <!-- /header -->
