--- a/index.html
+++ b/index.html
@@ -410,7 +410,7 @@ $(document).ready(function(){
                         <source src="vid/intro.mp4" type="video/mp4">
                     </video>
                     <div class="carousel-caption slider-con">
-                      <img class="responsive-img" height="auto" src="img/DLSC_Logo_1x1_small.png" alt="DLSOBU">
+                      <img class="timg" height="90px" src="https://raw.githubusercontent.com/kasuncfdo/dls/main/College%20Assests/College-Items/DLS_WEBCREST.png" alt="DLSOBU">
 
                     </br>
                     </br>
@@ -422,7 +422,7 @@ $(document).ready(function(){
                     }
                     </style>
                    
-                        <b class="parra" style="font-size: 16px;" style="margin: 10px;">OVER 116TH PROUD ANNIVERSARY WITH <span> DE LA SALLE COLLEGE</span></b>
+                        <b class="parra" style="font-size: 16px;" style="margin: 10px;">OVER 117TH PROUD ANNIVERSARY WITH <span> DE LA SALLE COLLEGE</span></b>
          
                 <div></div>
                         <p>~ INDIVISA MANENT ~</p>
