--- a/directors_message.html
+++ b/directors_message.html
@@ -313,6 +313,12 @@
                   .shadow2 { 
                     box-shadow: 0 7px 30px -10px rgba(150,170,180,0.5);
                   }
+
+                  @media (min-width: 600px) and (max-width: 767px) {
+                    .contents-wrapper .content {
+  padding-left: 0rem;
+  padding-right: 0rem;
+} }
       
                  /************ .contents-wrapper{
                       background-image: url("./img/bg\ layer.jpg");
