--- a/index.html
+++ b/index.html
@@ -76,6 +76,11 @@ $(document).ready(function(){
     <meta name="twitter:domain" content="www.delasalle.lk" />
     <meta name="twitter:title" content="De La Salle College,Colombo - Indivisa Manent" />
     <meta name="twitter:image" content="https://raw.githubusercontent.com/kasuncfdo/dls/main/img/Meta/dlsogimg1ps.jpg" />
+    <meta name="robots" content="index, follow">
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+    <meta name="language" content="English">
+    <meta name="revisit-after" content="1 days">
+
 
     <!-- Primary Meta Tags -->
 <meta name="title" content="De La Salle College, Colombo - Indivisa Manent">
