--- a/History-and-Location.html
+++ b/History-and-Location.html
@@ -404,7 +404,14 @@ body {
             </br>
           <center>  <img class="responsive-img" src="img/crest-bw.png" style="width: 250px; height:250px;"> </center>
         </br>
-                <p>De La Salle College, situated at the entrance to the fishing community at
+                
+        <section>
+            <audio id="audio" preload="none" style="width: 100%;" autoplay controls allow="autoplay">
+                <source type="audio/mp3" src="Audios/Historyofcollege.mp3"/>
+            </audio>	
+
+</section>
+        <p>De La Salle College, situated at the entrance to the fishing community at
                     Mutwal, where the less - privileged and the marginalized eke out a modest
                     existence, has been a haven of knowledge and inspiration to all and sundry
                     during the last hundred years. It has very faithfully and constructively served
