--- a/college-anthem.html
+++ b/college-anthem.html
@@ -34,7 +34,10 @@
 <meta name="twitter:domain" content="www.delasalle.lk" />
 <meta name="twitter:title" content="College Anthem | De La Salle College, Colombo - Indivisa Manent" />
 <meta name="twitter:image" content="https://raw.githubusercontent.com/kasuncfdo/dls/main/img/Meta/dlsogimg1ps.jpg" />
-
+<meta name="robots" content="index, follow">
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+<meta name="language" content="English">
+<meta name="revisit-after" content="1 days">
 <!-- Primary Meta Tags -->
 <meta name="title" content="College Anthem | De La Salle College, Colombo - Indivisa Manent">
 <meta name="description" content="De La Salle College, Colombo is the only school in Sri Lanka dedicated to the Patron Saint of Christian Teachers St. John Baptist de la Salle, founder of the congregation of De La Salle Brothers of the Christian Schools in Latin: "Fratres Scholarum Christianarum".">
@@ -283,7 +286,7 @@
         <!-- /header -->
         <div style="text-align: center;">
             <a href="#" target="_blank">
-                <img class="responsive-img" src="gif/anthem.gif">
+                <img class="responsive-img" src="gif/anthemcover.gif">
             </a>
     </div>
         <section>
