--- a/news.html
+++ b/news.html
@@ -497,6 +497,27 @@ body {
                                                     <div class="news-grid">
                                                         <div class="news-grid-image"><img src="News and Events/web.png" alt="">
                                                             <div class="news-grid-box">
+                                                                <h1>10</h1>
+                                                                <p>JUN</p>
+                                                                <p>2022</p>
+                                                            </div></div>
+                                                            <div class="news-grid-txt">
+                                                                <span>EVENTS</span>
+                                                                <h2>Prefects Ceromony</h2>
+                                                                <ul>
+                                                                    <li><i class="fa fa-calendar" aria-hidden="true"></i> Jun 10, 2022</li>
+                                                                    <li><i class="fa fa-user" aria-hidden="true"></i> Admin</li>
+                                                                </ul>
+                                                                <p>Recent</p>
+                                                                <a href="news/our-new-college-website-has-been-launched.php.html">Read More...</a>
+                                                            </div>
+                                                        </div>
+                                                    </div>
+
+                                                <div class="col-md-4 col-lg-4 m-15px-tb">
+                                                    <div class="news-grid">
+                                                        <div class="news-grid-image"><img src="News and Events/web.png" alt="">
+                                                            <div class="news-grid-box">
                                                                 <h1>14</h1>
                                                                 <p>JAN</p>
                                                                 <p>2022</p>
@@ -505,10 +526,10 @@ body {
                                                                 <span>EVENTS</span>
                                                                 <h2>Our New College Website Has Been Launched</h2>
                                                                 <ul>
-                                                                    <li><i class="fa fa-calendar" aria-hidden="true"></i> Dec 11, 2021</li>
+                                                                    <li><i class="fa fa-calendar" aria-hidden="true"></i> Jun 10, 2022</li>
                                                                     <li><i class="fa fa-user" aria-hidden="true"></i> Admin</li>
                                                                 </ul>
-                                                                <p>we are so excited announce The launch of our redesigned website and launch announcement on December 11th, 2021, after nearly two months of the efforts and dedication of our college student Mast Kasun Chanuka.</p>
+                                                                <p>we are so excited announce The launch of our redesigned website and launch announcement on June 10th, 2022, after nearly three months of the efforts and dedication of our college student Mast Kasun Chanuka.</p>
                                                                 <a href="news/our-new-college-website-has-been-launched.php.html">Read More...</a>
                                                             </div>
                                                         </div>
