--- a/index.html
+++ b/index.html
@@ -1014,9 +1014,9 @@ $(document).ready(function(){
                                         </div></div>
                                         <div class="news-grid-txt">
                                             <span>EVENTS</span>
-                                            <h2>The Kingdom by the sea turns 116th years</h2>
+                                            <h2>The Kingdom by the sea turns 117th years</h2>
                                             <ul>
-                                                <li><i class="fa fa-calendar" aria-hidden="true"></i> May 11, 2021</li>
+                                                <li><i class="fa fa-calendar" aria-hidden="true"></i> May 11, 2022</li>
                                                 <li><i class="fa fa-user" aria-hidden="true"></i> Admin</li>
                                             </ul>
                                             <p>Today marks 116 years since De La Salle College, Colombo, was founded on February 1, 1905 by the LaSallian Brothers.Since then the school has been headed</p>
@@ -1035,10 +1035,10 @@ $(document).ready(function(){
                                                 <span>NEWS</span>
                                                 <h2>Our New College Website Has Been Launched</h2>
                                                 <ul>
-                                                    <li><i class="fa fa-calendar" aria-hidden="true"></i> Dec 11, 2021</li>
+                                                    <li><i class="fa fa-calendar" aria-hidden="true"></i> June 10, 2022</li>
                                                     <li><i class="fa fa-user" aria-hidden="true"></i> Admin</li>
                                                 </ul>
-                                                <p>We are delighted to announce the launch of our new  college website. We are pleased to officially announce the launch on December, 2021,</p>
+                                                <p>We are delighted to announce the launch of our new  college website. We are pleased to officially announce the launch on Today, 2022,</p>
                                                 <a href="news/our-new-college-website-has-been-launched.php.html">Read More...</a>
                                             </div>
                                         </div>
