--- a/index.html
+++ b/index.html
@@ -265,7 +265,7 @@ $(document).ready(function(){
                                             <li><a href="BRIEF-HISTORY.html">BRIEF HISTORY OF DE LA SALLE</a></li>
                                             <li><a href="Chronoloy-College-History.html">CHRONOLOGY COLLEGE HISTORY</a></li>
                                             <li><a href="The-Coat-of-Arms.html">THE-COAT-OF-ARMS</a></li>
-                                            <li><a href="College-Directors.html">PAST PRINCIPALS</a></li>
+                                            <li><a href="https://en.wikipedia.org/wiki/De_La_Salle_College,_Colombo#:~:text=The%20college%20was%20inaugurated%20on%201%20February%201905%20by%20the%20LaSallian%20Brothers.%20Since%20then%20the%20school%20has%20been%20headed%20by%20many%20LaSallian%20Brothers%20as%20listed%20below.">PAST PRINCIPALS</a></li>
                                             <!--li><a href="Identity/tcs.html">TCS</a></li-->
                                         </ul>
                                     </li>
