--- a/news.html
+++ b/news.html
@@ -503,13 +503,13 @@ body {
                                                             </div></div>
                                                             <div class="news-grid-txt">
                                                                 <span>EVENTS</span>
-                                                                <h2>Prefects Ceromony</h2>
+                                                                <h2>Prefects Investiture Ceromony</h2>
                                                                 <ul>
                                                                     <li><i class="fa fa-calendar" aria-hidden="true"></i> Jun 10, 2022</li>
                                                                     <li><i class="fa fa-user" aria-hidden="true"></i> Admin</li>
                                                                 </ul>
                                                                 <p>Recent</p>
-                                                                <a href="news/our-new-college-website-has-been-launched.php.html">Read More...</a>
+                                                                <a href="https://www.facebook.com/groups/4385030891619882/permalink/4918948844894748/">Read More...</a>
                                                             </div>
                                                         </div>
                                                     </div>
