--- a/index.html
+++ b/index.html
@@ -271,7 +271,7 @@ $(document).ready(function(){
                                     </li>
 
                                     <li><a href="directors_message.html">PRINCIPAL'S MESSAGE</a></li>
-                                    <li><a href="College-Directors.html">PAST COLLEGE PRINCIPALS</a>
+                                    <li><a href="https://en.wikipedia.org/wiki/De_La_Salle_College,_Colombo#:~:text=The%20college%20was%20inaugurated%20on%201%20February%201905%20by%20the%20LaSallian%20Brothers.%20Since%20then%20the%20school%20has%20been%20headed%20by%20many%20LaSallian%20Brothers%20as%20listed%20below.">PAST COLLEGE PRINCIPALS</a>
                                     </li>
                                     <li class="dropdown-submenu">
                                         <a href="#" class="dropdown-toggle" data-toggle="dropdown">COLLEGE FACILITIES</a>
