--- a/History-and-Location.html
+++ b/History-and-Location.html
@@ -293,7 +293,7 @@
         <!-- /header -->
         <div style="text-align: center;">
             <a href="#" target="_blank">
-                <img class="responsive-img" src="img/delasalle-flag.jpg">
+                <img class="responsive-img" src="College Assests/College-Items/home-section2.jpg">
             </a>
     </div>
         <section>
