--- a/news.html
+++ b/news.html
@@ -495,7 +495,7 @@ body {
                                             <div class="row">
                                                 <div class="col-md-4 col-lg-4 m-15px-tb">
                                                     <div class="news-grid">
-                                                        <div class="news-grid-image"><img src="News and Events/web.png" alt="">
+                                                        <div class="news-grid-image"><img src="News and Events/Prefects-Investiture-Ceromony.jpg" alt="">
                                                             <div class="news-grid-box">
                                                                 <h1>10</h1>
                                                                 <p>JUN</p>
