--- a/College-Directors.html
+++ b/College-Directors.html
@@ -3,6 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>De La Salle College Colombo 15 | College Directors </title>
 
     <!--favicon-->
