--- a/History-and-Location.html
+++ b/History-and-Location.html
@@ -406,12 +406,12 @@ body {
         </br>
                 
         <section>
-            <audio id="audio" preload="none" style="width: 100%;" autoplay controls allow="autoplay">
+            <!--audio id="audio" preload="none" style="width: 100%;" autoplay controls allow="autoplay">
                 <source type="audio/mp3" src="Audios/Historyofcollege.mp3"/>
-            </audio>	
+            </audio-->	
 
 </section>
-        <p>De La Salle College, situated at the entrance to the fishing community at
+                    <p>De La Salle College, situated at the entrance to the fishing community at
                     Mutwal, where the less - privileged and the marginalized eke out a modest
                     existence, has been a haven of knowledge and inspiration to all and sundry
                     during the last hundred years. It has very faithfully and constructively served
@@ -599,7 +599,7 @@ body {
                       </div>
                     </div>
                 <hr class="hr-text" data-content="">
-                <p style="color: rgba(248, 248, 255, 0.719); text-align: center; size: auto;">© Copyright 2021 | De La Salle College, Mutwal, Sri Lanka.<br>All Rights <svg class="heart" viewBox="0 0 32 29.6">
+                <p style="color: rgba(248, 248, 255, 0.719); text-align: center; size: auto;">© Copyright 2022 | De La Salle College, Mutwal, Sri Lanka.<br>All Rights <svg class="heart" viewBox="0 0 32 29.6">
                     <path d="M23.6,0c-3.4,0-6.3,2.7-7.6,5.6C14.7,2.7,11.8,0,8.4,0C3.8,0,0,3.8,0,8.4c0,9.4,9.5,11.9,16,21.2
                       c6.1-9.3,16-12.1,16-21.2C32,3.8,28.2,0,23.6,0z"></path>
                   </svg> Reserved</p>
