--- a/index.html
+++ b/index.html
@@ -1028,8 +1028,8 @@ $(document).ready(function(){
                                     <div class="news-grid">
                                         <div class="news-grid-image"><img src="img/dlsd.jpg" alt="">
                                             <div class="news-grid-box">
-                                                <h1>11</h1>
-                                                <p>Dec</p>
+                                                <h1>10</h1>
+                                                <p>Jun</p>
                                             </div></div>
                                             <div class="news-grid-txt">
                                                 <span>NEWS</span>
@@ -1043,7 +1043,7 @@ $(document).ready(function(){
                                             </div>
                                         </div>
                                     </div>
-                                    <div class="col-md-4 col-lg-4 m-15px-tb">
+                                    <!-- <div class="col-md-4 col-lg-4 m-15px-tb">
                                         <div class="news-grid">
                                             <div class="news-grid-image"><img src="img/dlsobucrest.jpg" alt="">
                                                 <div class="news-grid-box">
@@ -1062,7 +1062,7 @@ $(document).ready(function(){
                                                 </div>
                                             </div>
                                         </div>
-                                    </div>
+                                    </div> -->
                                 </div>
                             </div></div>
                             
