--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@ $(document).ready(function(){
 </symbol>
 </svg>
 
-  </li><li><a href="index.html"><img src="https://raw.githubusercontent.com/kasuncfdo/dls/main/College%20Assests/College-Items/DLS_WEBCREST.png" alt="" class="top-crest" id="top-crest" style="transform: scale(0.8);"></a></li>
+  </li><li><a href="index.html"><img src="College Assests/College-Items/DLS_WEBCREST.png" alt="" class="top-crest" id="top-crest" style="transform: scale(0.8);"></a></li>
     <li>
      <div class="nav-icons">
         <div class="navbar navbar-inverse navbar-custom" role="navigation">
